--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
 install:
   - "pip install -r requirements.txt"
 script:
-- python test.py
+  - python test.py
 after_success:
-- sbt coveralls
+  - coveralls
